# Nanoforge

./: .gitignore  LICENSE.md  README.md  next.txt  pyproject.toml  requirements.txt
configs/: code-110m.yaml  cpu-tiny.yaml  tiny.yaml  ultrachat-18m.yaml
docs/: ai_assistant_project_guide.md  architecture.md  automatic_training_guide.md  roadmap.md  train_model_steps.md  training_guide.md
native/nanoforge-tokenizers/: Cargo.toml  README.md  pyproject.toml
native/nanoforge-tokenizers/src/: lib.rs
scripts/: smoke_config.py
src/nanoforge/: __init__.py  benchmark.py  cli.py  components.py  config.py  dashboard.py  imports.py  profiling.py  progress.py  quantization.py  registry.py  server.py  templates.py  tools.py
src/nanoforge/data/: __init__.py  cleaning.py  dataset.py  formats.py  modes.py  native_tokenizer.py  packing.py  preprocess.py  tokenizer.py  tokenizer_benchmark.py  tokenizer_metrics.py
src/nanoforge/evaluation/: __init__.py  metrics.py
src/nanoforge/export/: __init__.py  gguf.py  onnx.py
src/nanoforge/generation/: __init__.py  engine.py  sampling.py
src/nanoforge/model/: __init__.py  activations.py  attention.py  lora.py  moe.py  norms.py  positions.py  registry.py  rope.py  transformer.py
src/nanoforge/training/: __init__.py  checkpoint.py  distillation.py  health.py  optimizers.py  preferences.py  schedulers.py  trainer.py  utils.py
tests/: convert.py  convert_chat_parquet.py  datacheck.py  naju.py  test_data_streaming.py  test_imports_templates.py  test_native_tokenizer.py  test_profiling.py  test_progress.py  test_registry.py  test_smoke.py  test_syntax.py  test_training_reliability.py
