[package]
name = "nanoforge-tokenizers"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Optional native tokenizer acceleration for Nanoforge"

[lib]
name = "nanoforge_tokenizers"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
