[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "nanoforge-tokenizers"
version = "0.1.0"
requires-python = ">=3.10"
description = "Optional Rust tokenizer acceleration for Nanoforge"
license = { text = "MIT" }

[tool.maturin]
module-name = "nanoforge_tokenizers"
features = ["pyo3/extension-module"]
